# saavg-cos

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md  zone_sizes.pkl
data/Geological_zones_V6/: Geological_zones_V6.dbf  Geological_zones_V6.lyr  Geological_zones_V6.sbn  Geological_zones_V6.sbx  Geological_zones_V6.shp  Geological_zones_V6.shp.xml  Geological_zones_V6.shx
data/gmm_config.zarr/: .zmetadata
data/gmm_config.zarr/GMM-V5/: .zattrs
data/gmm_config.zarr/GMM-V5/IM/: .zarray  0
data/gmm_config.zarr/GMM-V5/IM_T/: .zarray  0
data/gmm_config.zarr/GMM-V5/T/: 0
data/gmm_config.zarr/GMM-V5/af_parameters/: .zarray  .zattrs  0.0.0  1.0.0
data/gmm_config.zarr/GMM-V5/b_median/: 0
data/gmm_config.zarr/GMM-V5/b_phiss/: .zattrs
data/gmm_config.zarr/GMM-V5/b_tau/: 0
data/gmm_config.zarr/GMM-V5/correlation_matrix/: .zarray  .zattrs  0.0
data/gmm_config.zarr/GMM-V5/duration_parameters/: .zarray  .zattrs  0.0
data/gmm_config.zarr/GMM-V5/gmm_version/: 0
data/gmm_config.zarr/GMM-V5/median_parameters/: .zarray  .zattrs  0.0.0
data/gmm_config.zarr/GMM-V6/: .zattrs
data/gmm_config.zarr/GMM-V7/: .zattrs
report/: derivations.md  references.bib  report.md  report.tex
saavg_cos/: __init__.py  chain.py  cos_cache.py  fragility.py  gmm_V7.py  mc.py  model.py  risk_hazard.py  source.py  spectral_im.py
scripts/: benchmark_multiprocessing.py  compare_risk_metrics.py  figure_convergence.py  figure_density_dispersion.py  make_hazard_map.py  prepare_im_lookup.py  validate_against_mc.py
tests/: test_saavg_cos.py
(+94 files in other folders)
